# codebase-skill

./: .gitignore  CONTRIBUTING.md  GITHUB_PUBLICATION.md  README.md  README.zh-CN.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: install-skill.sh  install.sh
skill/: SKILL.md
src/codebase_cli/: __init__.py  cli.py
tests/: smoke_test.sh  test_codebase.py
