[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-skill"
version = "0.5.1"
description = "CLI-first local wrapper for codebase-memory-mcp with repository-local .codebase storage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["codebase", "code-index", "mcp", "skill", "cli", "claude-code", "copilot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.scripts]
codebase = "codebase_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
